include experiments run in revisions

--- a/E - SBERT Model Training/13_GC_JOBGBERT - MultipleNegativesRanking.ipynb
+++ b/E - SBERT Model Training/13_GC_JOBGBERT - MultipleNegativesRanking.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "AkkomPGdV3dV"
    },
@@ -72,12 +72,29 @@
     "from datetime import datetime\n",
     "from sklearn.model_selection import KFold\n",
     "from transformers import set_seed\n",
+    "set_seed(42)\n",
+    "from sentence_transformers import SentenceTransformer, InputExample\n",
+    "from torch.utils.data import DataLoader\n",
+    "from sentence_transformers import models, losses, util\n",
+    "from tqdm import tqdm\n",
+    "import random\n",
+    "from sentence_transformers import evaluation\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "from collections import Counter\n",
+    "import os\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from helpers import *\n",
+    "import numpy as np\n",
+    "from datetime import datetime\n",
+    "from sklearn.model_selection import KFold\n",
+    "from transformers import set_seed\n",
     "set_seed(42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "id": "722fJkSlB-VR"
    },
@@ -96,6 +113,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/6 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6/6 [00:01<00:00,  5.93it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_dict = load_data_pairs()\n",
+    "pos_pairs = flatten_list([data_dict[x] for x in data_dict if \"pos\" in x])\n",
+    "neg_pairs = flatten_list([data_dict[x] for x in data_dict if \"neg\" in x])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "xSp9eTjdnZWD"
@@ -106,34 +149,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "id": "3pcrar0nWJqC"
    },
    "outputs": [],
    "source": [
-    "modelname = \"../00_data/SBERT_Models/models/jobgbert_TSDAE_epochs5\"\n",
-    "# modelname = \"agne/jobgbert\""
+    "# modelname = \"../00_data/SBERT_Models/models/jobgbert_TSDAE_epochs5\"\n",
+    "# modelname = \"agne/jobgbert\"\n",
+    "modelname = \"google/rembert\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "id": "QEF97EZFt6LY"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No sentence-transformers model found with name google/rembert. Creating a new one with mean pooling.\n"
+     ]
+    }
+   ],
    "source": [
     "model = SentenceTransformer(modelname)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "id": "rNJLBve_WiNK"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m   TSDAE \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwTSDAE\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m----> 6\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "if modelname == \"agne/jobgbert\":\n",
     "  TSDAE = \"woTSDAE\"\n",
@@ -141,6 +205,16 @@
     "  TSDAE = \"wTSDAE\"\n",
     "else:\n",
     "  raise TypeError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if modelname == \"google/rembert\":\n",
+    "  TSDAE = \"woTSDAE\""
    ]
   },
   {
@@ -198,20 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "id": "Ux1alEzQBIY4"
    },
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'pos_pairs' is not defined",
+     "evalue": "name 'kf' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m training_start \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([c \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(datetime\u001b[38;5;241m.\u001b[39mnow())\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m c\u001b[38;5;241m.\u001b[39misdigit()])\n\u001b[1;32m      4\u001b[0m max_MRR \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch, (train_index, dev_index) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(kf\u001b[38;5;241m.\u001b[39msplit(\u001b[43mpos_pairs\u001b[49m)):\n\u001b[1;32m      8\u001b[0m   pos_train_samples \u001b[38;5;241m=\u001b[39m [pos_pairs[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m train_index]\n\u001b[1;32m      9\u001b[0m   pos_dev_samples \u001b[38;5;241m=\u001b[39m [pos_pairs[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m dev_index]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pos_pairs' is not defined"
+      "Cell \u001b[0;32mIn[7], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m training_start \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin([c \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(datetime\u001b[38;5;241m.\u001b[39mnow())\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mif\u001b[39;00m c\u001b[38;5;241m.\u001b[39misdigit()])\n\u001b[1;32m      4\u001b[0m max_MRR \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch, (train_index, dev_index) \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[43mkf\u001b[49m\u001b[38;5;241m.\u001b[39msplit(pos_pairs)):\n\u001b[1;32m      8\u001b[0m   pos_train_samples \u001b[38;5;241m=\u001b[39m [pos_pairs[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m train_index]\n\u001b[1;32m      9\u001b[0m   pos_dev_samples \u001b[38;5;241m=\u001b[39m [pos_pairs[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m dev_index]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'kf' is not defined"
      ]
     }
    ],
@@ -301,7 +375,7 @@
   },
   "gpuClass": "premium",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "careerbert",
    "language": "python",
    "name": "python3"
   },
