--- a/E - SBERT Model Training/14_GC_EmbeddingJobAds.ipynb
+++ b/E - SBERT Model Training/14_GC_EmbeddingJobAds.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -29,25 +29,16 @@
     "id": "-aOtwdg3jehe",
     "outputId": "2637e5a1-7990-4b9e-a2db-5f32a85c6704"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
-      "/content/drive/MyDrive/TRAINING\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "%cd /content/drive/MyDrive/TRAINING"
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
+    "# %cd /content/drive/MyDrive/TRAINING"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "executionInfo": {
      "elapsed": 4318,
@@ -63,13 +54,13 @@
    },
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "!pip install sentence_transformers"
+    "# %%capture\n",
+    "# !pip install sentence_transformers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -92,7 +83,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+      "[nltk_data] Downloading package punkt to /home/roj14702/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
@@ -127,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "executionInfo": {
      "elapsed": 13,
@@ -214,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "executionInfo": {
      "elapsed": 10,
@@ -285,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -313,7 +304,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "executionInfo": {
      "elapsed": 5,
@@ -347,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "executionInfo": {
      "elapsed": 2390,
@@ -368,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -393,7 +384,7 @@
        "1700"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "executionInfo": {
      "elapsed": 9,
@@ -420,7 +411,7 @@
    },
    "outputs": [],
    "source": [
-    "jobs = (load_json(\"./00_data/ESCO/ESCO_JOBS_ALL.json\"))\n",
+    "jobs = (load_json(\"../00_data/ESCO/ESCO_JOBS_ALL.json\"))\n",
     "esco_lookup = {}\n",
     "for job in jobs:\n",
     "  esco_lookup[job[\"jobid_esco\"]] = job[\"jobtitle\"]\n"
@@ -437,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -466,13 +457,14 @@
     "    #\"../00_data/SBERT_Models/jobgbert_batch64_wTSDAE_2e-05_f10/\",\n",
     "    #\"../00_data/SBERT_Models/jobgbert_batch16_woTSDAE_2e-05_f10/\",\n",
     "    \"../00_data/SBERT_Models/models/jobgbert_batch32_woTSDAE_2e-05_f10/\",\n",
-    "    #\"../00_data/SBERT_Models/jobgbert_batch64_woTSDAE_2e-05_f10/\"\n",
+    "    #\"../00_data/SBERT_Models/jobgbert_batch64_woTSDAE_2e-05_f10/\", \n",
+    "    \"../00_data/SBERT_Models/models/consultantbert_multilingual_best/\",\n",
     "        ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -530,7 +522,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7164dd575b9c40598f1d379e1c75049e",
+       "model_id": "5941486339044fdfaf7d44f9ee85c458",
        "version_major": 2,
        "version_minor": 0
       },
@@ -544,7 +536,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d98610bc327a4e0f96cec10a975b2e09",
+       "model_id": "aa4edb3320494fc0ab410d972124e395",
        "version_major": 2,
        "version_minor": 0
       },
@@ -558,7 +550,105 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ddcbcd1a5194435d97c4a79faf70f0cd",
+       "model_id": "93791a73b76546d0b2c936206f1ce8ac",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/92 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pickle saved.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "13f2fd8805da4f0a9cd2dda79f2df36b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/92 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33a805b4ee6f456ebeb105ae68587bb3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/92 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e1c9e8f8776f457f8a0b9d95ae3ab346",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/92 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pickle saved.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "570d1b6d23994b68beacb71a0cb3cac8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/92 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2aa4dadacce842ee9ea1c91f3b8bea71",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/92 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "85e5af8c109849e08fd3c23ed3813493",
        "version_major": 2,
        "version_minor": 0
       },
@@ -586,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -623,14 +713,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating Encodings for /content/drive/MyDrive/TRAINING/_COSINESIM/content/jobgbert_batch32_woTSDAE_2e-05_f10/\n",
+      "Creating Encodings for ../00_data/SBERT_Models/models/gbert_batch32_woTSDAE_2e-05_f10/\n",
       "84273 ads to encode.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1e8122b32874350b564c94fe180485c",
+       "model_id": "698850f9314e4535b5082441e41725f1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -642,40 +732,17 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished encoding.\n",
-      "Adding Communities.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1700/1700 [02:42<00:00, 10.48it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating Centroids.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1700/1700 [01:01<00:00, 27.79it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pickle saved.\n",
-      "Pickle saved.\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCreating Encodings for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m model \u001b[38;5;241m=\u001b[39m SentenceTransformer(model_path)\n\u001b[0;32m----> 4\u001b[0m df_new \u001b[38;5;241m=\u001b[39m \u001b[43mfilter_communities_total\u001b[49m\u001b[43m(\u001b[49m\u001b[43mads_df\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshort+title\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_community_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mthreshold\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.5\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m uniqueids \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m(df_new[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mesco_id\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39munique())\n\u001b[1;32m      6\u001b[0m unfiltered_centroids_dict \u001b[38;5;241m=\u001b[39m {}\n",
+      "Cell \u001b[0;32mIn[15], line 6\u001b[0m, in \u001b[0;36mfilter_communities_total\u001b[0;34m(df, columnname_to_encode, model, min_community_size, threshold)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(unique_texts)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m ads to encode.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m embedding_map \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m----> 6\u001b[0m embeddings \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[43munique_texts\u001b[49m\u001b[43m,\u001b[49m\u001b[43mshow_progress_bar\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43mconvert_to_tensor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m64\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFinished encoding.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m text, embedding \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mzip\u001b[39m(unique_texts,embeddings\u001b[38;5;241m.\u001b[39mtolist()):\n",
+      "File \u001b[0;32m~/miniconda3/envs/careerbert/lib/python3.10/site-packages/sentence_transformers/SentenceTransformer.py:619\u001b[0m, in \u001b[0;36mSentenceTransformer.encode\u001b[0;34m(self, sentences, prompt_name, prompt, batch_size, show_progress_bar, output_value, precision, convert_to_numpy, convert_to_tensor, device, normalize_embeddings, **kwargs)\u001b[0m\n\u001b[1;32m    610\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtoken_type_ids\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m features:\n\u001b[1;32m    611\u001b[0m             features[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtoken_type_ids\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat(\n\u001b[1;32m    612\u001b[0m                 (\n\u001b[1;32m    613\u001b[0m                     features[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtoken_type_ids\u001b[39m\u001b[38;5;124m\"\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    616\u001b[0m                 \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\n\u001b[1;32m    617\u001b[0m             )\n\u001b[0;32m--> 619\u001b[0m features \u001b[38;5;241m=\u001b[39m \u001b[43mbatch_to_device\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfeatures\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    620\u001b[0m features\u001b[38;5;241m.\u001b[39mupdate(extra_features)\n\u001b[1;32m    622\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n",
+      "File \u001b[0;32m~/miniconda3/envs/careerbert/lib/python3.10/site-packages/sentence_transformers/util.py:1067\u001b[0m, in \u001b[0;36mbatch_to_device\u001b[0;34m(batch, target_device)\u001b[0m\n\u001b[1;32m   1065\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m batch:\n\u001b[1;32m   1066\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(batch[key], Tensor):\n\u001b[0;32m-> 1067\u001b[0m         batch[key] \u001b[38;5;241m=\u001b[39m \u001b[43mbatch\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtarget_device\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1068\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m batch\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -779,7 +846,7 @@
   },
   "gpuClass": "premium",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "careerbert",
    "language": "python",
    "name": "python3"
   },
