--- a/E - SBERT Model Training/15_GC_Evaluation Testad.ipynb
+++ b/E - SBERT Model Training/15_GC_Evaluation Testad.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1057171/1460843178.py:3: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython.display\n",
+      "/tmp/ipykernel_770451/1460843178.py:3: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython.display\n",
       "  from IPython.core.display import display, HTML\n",
       "[nltk_data] Downloading package punkt to /home/roj14702/nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n"
@@ -88,7 +88,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 9,
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 8,
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 8,
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "executionInfo": {
      "elapsed": 6,
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "executionInfo": {
      "elapsed": 2104,
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -378,9 +378,15 @@
      "output_type": "stream",
      "text": [
       "Available model: gbert_batch32_woTSDAE_2e-05_f10\n",
+      "Available model: gbert_batch16_wTSDAE_2e-05_f10_best\n",
       "Available model: jobgbert_TSDAE_epochs5\n",
       "Available model: jobgbert_batch32_woTSDAE_2e-05_f10\n",
-      "Available model: gbert_TSDAE_epochs5\n"
+      "Available model: consultantbert_multilingual_best\n",
+      "Available model: gbert_TSDAE_epochs5\n",
+      "Available model: consultantbert_multilingual_test\n",
+      "Available model: gbert_batch16_wTSDAE_2e-05_f10\n",
+      "Available model: consultantbert_multilingual_test_best\n",
+      "Available model: consultantbert_multilingual\n"
      ]
     }
    ],
@@ -391,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "executionInfo": {
      "elapsed": 11,
@@ -423,6 +429,7 @@
     "         # \"gbert_batch32_wTSDAE_2e-05_f10/\",\n",
     "          #\"gbert_batch64_woTSDAE_2e-05_f10/\",\n",
     "          #\"gbert_batch64_wTSDAE_2e-05_f10/\",\n",
+    "          \"consultantbert_multilingual_best/\"\n",
     "          ]\n",
     "          "
    ]
@@ -438,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "executionInfo": {
      "elapsed": 11,
@@ -458,14 +465,14 @@
      "output_type": "stream",
      "text": [
       "Loading Model jobgbert_batch32_woTSDAE_2e-05_f10/\n",
-      "dict_keys(['skillsets', 'desc', 'jobtitle', 'adcentroid_filtered', 'adcentroid_unfiltered', 'job_centroid'])\n",
+      "dict_keys(['skillsets', 'desc', 'jobtitle'])\n",
       "Creating Embeddings.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99ffb83f2f844d5b93c6ca054ff8d9a1",
+       "model_id": "9b62b760f8e64a028be6d48c0b1860d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -484,172 +491,15 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████| 2250/2250 [00:01<00:00, 1358.63it/s]\n"
+     "ename": "KeyError",
+     "evalue": "'job_centroid'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 26\u001b[0m\n\u001b[1;32m     24\u001b[0m similarities \u001b[38;5;241m=\u001b[39m {}\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mjob_centroid\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[0;32m---> 26\u001b[0m   similarities[k] \u001b[38;5;241m=\u001b[39m (util\u001b[38;5;241m.\u001b[39mcos_sim(testads[textkind],\u001b[43membeddings\u001b[49m\u001b[43m[\u001b[49m\u001b[43mk\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124membeddings\u001b[39m\u001b[38;5;124m\"\u001b[39m]))\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m similarities:\n\u001b[1;32m     29\u001b[0m   ranks \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'job_centroid'"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>textkind</th>\n",
-       "      <th>embedding_kind</th>\n",
-       "      <th>MRR</th>\n",
-       "      <th>missing</th>\n",
-       "      <th>max_similarity</th>\n",
-       "      <th>MRR@</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>jobgbert_batch32_woTSDAE_2e-05_f10</td>\n",
-       "      <td>embeddings_short</td>\n",
-       "      <td>job_centroid</td>\n",
-       "      <td>0.433598</td>\n",
-       "      <td>0.105778</td>\n",
-       "      <td>tensor(0.9398)</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                model          textkind embedding_kind  \\\n",
-       "0  jobgbert_batch32_woTSDAE_2e-05_f10  embeddings_short   job_centroid   \n",
-       "\n",
-       "        MRR   missing  max_similarity  MRR@  \n",
-       "0  0.433598  0.105778  tensor(0.9398)   100  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Model gbert_batch32_woTSDAE_2e-05_f10/\n",
-      "dict_keys(['skillsets', 'desc', 'adcentroid_filtered', 'adcentroid_unfiltered', 'job_centroid'])\n",
-      "Creating Embeddings.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5a9fd82d106418bbad6a81650d1504d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Batches:   0%|          | 0/71 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Finished creating Embeddings. Evaluating.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████| 2250/2250 [00:01<00:00, 1377.86it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>textkind</th>\n",
-       "      <th>embedding_kind</th>\n",
-       "      <th>MRR</th>\n",
-       "      <th>missing</th>\n",
-       "      <th>max_similarity</th>\n",
-       "      <th>MRR@</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>jobgbert_batch32_woTSDAE_2e-05_f10</td>\n",
-       "      <td>embeddings_short</td>\n",
-       "      <td>job_centroid</td>\n",
-       "      <td>0.433598</td>\n",
-       "      <td>0.105778</td>\n",
-       "      <td>tensor(0.9398)</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>gbert_batch32_woTSDAE_2e-05_f10</td>\n",
-       "      <td>embeddings_short</td>\n",
-       "      <td>job_centroid</td>\n",
-       "      <td>0.414569</td>\n",
-       "      <td>0.123111</td>\n",
-       "      <td>tensor(0.9497)</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                model          textkind embedding_kind  \\\n",
-       "0  jobgbert_batch32_woTSDAE_2e-05_f10  embeddings_short   job_centroid   \n",
-       "1     gbert_batch32_woTSDAE_2e-05_f10  embeddings_short   job_centroid   \n",
-       "\n",
-       "        MRR   missing  max_similarity  MRR@  \n",
-       "0  0.433598  0.105778  tensor(0.9398)   100  \n",
-       "1  0.414569  0.123111  tensor(0.9497)   100  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -907,7 +757,7 @@
   },
   "gpuClass": "premium",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "careerbert",
    "language": "python",
    "name": "python3"
   },
