--- a/E - SBERT Model Training/17_GC_PreparationEmbeddingsSpace.ipynb
+++ b/E - SBERT Model Training/17_GC_PreparationEmbeddingsSpace.ipynb
@@ -31,9 +31,9 @@
     }
    ],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')\n",
-    "%cd /content/drive/MyDrive/TRAINING"
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
+    "# %cd /content/drive/MyDrive/TRAINING"
    ]
   },
   {
@@ -54,8 +54,8 @@
    },
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "!pip install sentence_transformers"
+    "# %%capture\n",
+    "# !pip install sentence_transformers"
    ]
   },
   {
