--- a/C - Ad Classifier/5_ClassifierSelectAds.ipynb
+++ b/C - Ad Classifier/5_ClassifierSelectAds.ipynb
@@ -99,9 +99,7 @@
    "source": [
     "1. The jsonl file was further processed with [doccano](https://github.com/doccano/doccano)\n",
     "2. A project for NER was created\n",
-    "3. The relevant paragraphs were marked as \"relevant\"\n",
-    "\n",
-    "--> continued in folder TRAINING/Classification"
+    "3. The relevant paragraphs were marked as \"relevant\""
    ]
   }
  ],
