--- a/E - SBERT Model Training/11_GC_Pretraining.ipynb
+++ b/E - SBERT Model Training/11_GC_Pretraining.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "AkkomPGdV3dV"
    },
@@ -76,7 +76,7 @@
     "from collections import Counter\n",
     "import os\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from helpers import *\n",
+    "from helpers import load_data_pairs, flatten_list,load_json\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
     "from sklearn.model_selection import KFold\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "722fJkSlB-VR"
    },
@@ -96,7 +96,7 @@
     "  dev_set_total =[]\n",
     "  anchors = set([x[0] for x in pos_dev_samples])\n",
     "  neg_dev_samples = [x for x in neg_pairs if x[0] in anchors]\n",
-    "  print(\"Creating Devset\")\n",
+    "  print(\"Creating Dev Set\")\n",
     "  for anchor in tqdm(anchors):\n",
     "    pos_pairs_filtered = [x[1] for x in pos_dev_samples if x[0]==anchor]\n",
     "    neg_pairs_filtered = [x[1] for x in neg_dev_samples if x[0]==anchor]\n",
